refactor: full sync update